istios/fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service-fault
spec:
  hosts:
  - account-service
  http:
  - fault:
      delay:
        percentage: { value: 50 }
        fixedDelay: 5s
      abort:
        percentage: { value: 20 }
        httpStatus: 500
    route:
    - destination:
        host: account-service
        subset: v2
      weight: 100
