istios/virtualservice-account.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service
spec:
  hosts: [ "account-service" ]
  http:
  - route:
    - destination: { host: account-service, subset: v1, weight: 90 }
    - destination: { host: account-service, subset: v2, weight: 10 }
